# SnakeGame

./: CMakeLists.txt  README.md  main.cpp  widget.cpp
Headers/: widget.h
Sources/: CMakeLists.txt  main.cpp
